`Update Vercel configurations for API and client projects`
`api/vercel.json` and `client/vercel.json` files have been updated with the following changes:

- `api/vercel.json`:
  - Changed `src

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,9 @@
 {
     "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/"
-        }
+      {
+        "source": "/api/:path*",
+        "destination": "https://blog-website-rho-coral.vercel.app/api/:path*"
+      }
     ]
-}
+  }
+  
