--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,26 +2,20 @@
     "version": 2,
     "builds": [
         {
-            "src": "*.js",
+            "src": "api/*.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "PATCH",
-                "OPTIONS"
-            ],
+            "src": "/api/:path*",
+            "dest": "/api/:path*",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
             "headers": {
-                "Access-Control-Allow-Origin": "https://blog-website-ng4q.vercel.app", 
+                "Access-Control-Allow-Origin": "https://blog-website-ng4q.vercel.app",
                 "Access-Control-Allow-Credentials": "true",
-                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Authorization"
             }
         }
     ]
