--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,9 +1,8 @@
 {
     "rewrites": [
-      {
-        "source": "/api/:path*",
-        "destination": "https://blog-website-rho-coral.vercel.app/api/:path*"
-      }
+        {
+            "source": "/(.*)",
+            "destination": "/"
+        }
     ]
-  }
-  
+}
